--- a/circle2.html
+++ b/circle2.html
@@ -1,1 +1,1 @@
-<div id=t><script>u=250,p="innerHTML",n=0,setInterval('90>n&&(t[p]+="<p>");i=t.children[n%90];i[p]=n%90;with(i.style)color="#"+(n%4095).toString(16),transition="all 1s",position="fixed",left=u+u*Math.sin(n),top=u+u*Math.cos(n++)',25)</script>
+<div id=t><script>n=1,setInterval('90>n&&(t.innerHTML+=`<p>${n}</p>`);with(Math)with(t.children[n%90].style)u=min(innerHeight,innerWidth)/2,color="#"+(n%4e3).toString(16),transition="all 1s",position="fixed",left=u+u*sin(n),top=u+u*cos(n++)',25)</script>
