--- a/circle2.html
+++ b/circle2.html
@@ -1,1 +1,1 @@
-<div id=t><script>n=1,setInterval('90>n&&(t.innerHTML+=`<p>${n}</p>`);with(Math)with(t.children[n%90].style)u=min(innerHeight,innerWidth)/2,color="#"+(n%4e3).toString(16),transition="all 1s",position="fixed",left=u+u*sin(n),top=u+u*cos(n++)',25)</script>
+<p id=t><script>n=1,setInterval('90>n&&(t.innerHTML+=`<p>${n}</p>`);with(Math)with(t.children[n%90].style)u=min(innerHeight,innerWidth)/2-25,color="#"+(n%4e3).toString(16),transition="all 1s",position="fixed",left=u+u*cos(n),top=u+u*sin(n++)',25)</script>
