final commits before wiping hdd

--- a/circle3.html
+++ b/circle3.html
@@ -1,1 +1,1 @@
-<div id=t><script>u=450,p="innerHTML",n=0,k=0,x='setTimeout(\'90>n&&(t[p]+=`<div style="transition:all 1s;position:absolute">`);k=++k%u;i=t.children[n%90];i[p]=n%90;with(i.style)left=u+u*Math.sin(n),top=u+u*Math.cos(n++)\',k)';setInterval(x,5)</script>
+<div id=t><script>u=450,p="innerHTML",n=0,k=0,x='90>n&&(t[p]+="<p>");k=(k+1)%50;i=t.children[n%90];i[p]=n%90;with(i.style)left=u+u*Math.sin(n),transition="all 1s",position="fixed",top=u+u*Math.cos(n++);setTimeout(x,k)';eval(x)</script>
